# gravl

./: .clang_complete  .gcc-flags.json  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt~  DOCUMENTATION.md  Dockerfile  Doxyfile  OAK_Install.sh  README.md  TODO.md  generateDocumentationAndDeploy.sh  gravl.rosinstall  hardware_tables.ods  lidarBasiCode.py  package.xml  setup.sh
.pioenvs/: .sconsign.dblite  structure.hash
.pioenvs/teensy35/: firmware.elf  firmware.hex
bags/: 180316_imu_inplace.bag  GPS.bag  Lidar_101717.bag  TractorBayLidar.bag  TractorLidar10_102217.bag  TractorLidar1_101717.bag  TractorLidar1_102217.bag  TractorLidar2_101717.bag  TractorLidar2_102217.bag  TractorLidar3_101717.bag  TractorLidar3_102217.bag  TractorLidar4_102217.bag  TractorLidar5_102217.bag  TractorLidar6_102217.bag  TractorLidar7_102217.bag  TractorLidar8_102217.bag  TractorLidar9_102217.bag  rtkgps9-10.bag  rtkgpsheading11-13.bag
cfg/: gravl_cfg.cfg  tractor_cfg.cfg
config/: default_behaviors.yaml  tractor_behaviors.yaml  tractor_groundtruth.yaml  ust10lx_config.yaml
docs/: CREDITS.txt  elements.html  generic.html  index.html
include/gravl/: behaviors.cpp  behaviors.h
launch/: BarrelSim.launch  LidarFollowLaunch.launch  README.md  bag_experiment-0.launch  base_station.launch  bringup.launch  bringup_min.launch  demos.launch  downlidar.launch  ekf.launch  frontlidar.launch  hindbrain.launch  imu.launch  ir.launch  laser_to_pc.launch  lidar.launch  lidarvis.launch  localization.launch  localize_test.launch  mainstate.launch  odom-ekf.launch  rtk.launch  safety.launch  simulation.launch  teleop.launch  telewaypoint.launch  waypoint.launch
msg/: Cluster.msg  DiffDrive.msg  Hemisphere.msg  IMUSafety.msg  ImuSafety.msg  Plane.msg  RoboClawStats.msg  TwistLabeled.msg  hemisphere.msg
nodes/: temp_tf_broadcaster.py
params/: ekf_params.yaml
rviz/: demo.rviz  lidarvis.rviz  settings.rviz
scripts/: BackOnTrack.py  CMakeLists.txt  CentersToVector.py  ConeDetection.py  ConvertToAckermann.py  Follower.py  GUI.py  LidarCodeAdvanced.py  LidarCodeBasic.py  LidarFollower.py  ObstacleDetector.py  ObstacleDetector2D.py  PointFollower.py  PositionToOdom.py  README.md  RecordPoints.py  TractorOdom.py  arm_drone.cpp  bagRun.py  circleTest.py  circle_drive.py  clusterPrediction.py  const_vel_tf.py  driveToPoint.py  driveToPoint2.py  driveToPoints.py  feature_finder.py  goToPoints.py  gps.py  gpsToB  gpsToB.py  gps_nav_class.py  gps_navigation.py  gps_navigation_node.py  gps_to_odom.py  gps_to_plot.py  gradient.py  hello_world.cpp  hemisphere.py  laser2pc.py  (+22 more)
src/: CMakeLists.txt  Camera.cpp  Camera.h  Pure_pursuit.cpp  Pure_pursuit.h  README.md  State.h  Teleop.cpp  Teleop.h  Waypoint.cpp  behaviors.cpp  package.xml  platformio.ini  tf_broadcaster_imu.cpp
src/7_seg_test/: 7_seg_test.ino  lights.cpp
src/BehaviorEx/: BehaviorEx.cpp  BehaviorEx.h
src/Camera/: Camera.cpp  Camera.h
src/DriveState/: DriveState.cpp  DriveState.h
src/Driver/: Driver.cpp  Driver.h
src/EncOdom/: EncOdom.cpp  EncOdom.h
src/Hemisphere/: Hemisphere.cpp  Hemisphere.h
src/HindBrain/: Estop.cpp  Estop.h  HindBrain.h  HindBrain.ino  SoftSwitch.cpp  SoftSwitch.h  lib
src/ImuBase/: ImuBase.cpp  ImuBase.h
src/MainState/: Behavior.cpp  Behavior.h  MainState.cpp  MainState.h
src/QT/: Tractor.qml  main.cpp  main.qml  qml.qrc  tractor_controller.cpp  tractor_controller.h
src/Teleop/: Teleop.cpp  Teleop.h
src/Watchdog/: Watchdog.cpp  Watchdog.h
src/camera/: Camera.h  test_pointgrey.py
src/hemisphere/: Hemisphere.cpp  Hemisphere.h
src/hind_brain/: Makefile  estop.cpp  estop.h  hind_brain.h  hind_brain.ino  hind_brainRC.h  hind_brainRC.ino  lib  lights.h  soft_switch.cpp  soft_switch.h
src/imu-safety/: imu-safety.h
src/imu_base/: imu_base.cpp  imu_base.h
src/imu_safety/: ImuSafety.cpp  ImuSafety.h  imu_safety.h
src/kubojr/: servo.ino
src/kubojr/servo/: servo.ino
src/snowcat/hindbrain/: hindbrain.h  hindbrain.ino
src/snowcat_hindbrain/: odometry.h  snowcat_hindbrain.ino
src/snowcatv2/: motion.cpp  motion.h  odometry.cpp  odometry.h  snowcatv2.ino
src/state/: State.cpp  State.h
src/tractor/: .clang_complete  .gcc-flags.json  MotionControl.cpp  MotionControl.h  button.cpp  button.h  config.h  estop.cpp  estop.h  lights.cpp  lights.h  tractor.ino  wheel.h
src/tractor/.pioenvs/: .sconsign.dblite  structure.hash
src/tractor/hind_brain/: estop.cpp  estop.h  estop.h~  hind_brain.ino  soft_switch.cpp  soft_switch.h
src/tractor_hindbrain/: motion.cpp  motion.h  tractor_hindbrain.ino
src/waypoint/: Waypoint.h
srv/: StopTractor.srv  predictCluster.srv
teensy_patch/: core_pins.h  pins_teensy.c
teensyboard/: Initialization.txt
tests/HitchTest/HitchTest/: HitchTest.ino
tractor/: MotionControl.cpp  MotionControl.h  config.h  estop.cpp  estop.h  tractor.ino
udev_rules/: 49-teensy.rules  99-piksi.rules
