<?xml version="1.0"?>
<package>
  <name>gravl</name>
  <version>0.0.0</version>
  <description>Olin's ground robotic autonomous vehicle lab repo</description>

  <maintainer email="carl.moser@students.olin.edu">carl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ackermann_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>ackermann_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>phidgets-imu</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>swiftnav_ros</run_depend>
  <run_depend>rosserial</run_depend>
  <run_depend>pointgrey-camera-driver</run_depend>
  <run_depend>urg-node</run_depend>
  <export>
  </export>
</package>
