<?xml version="1.0"?>
<package format="2">
  <name>gravl</name>
  <version>0.0.0</version>
  <description>Olin's ground robotic autonomous vehicle lab repo</description>

  <maintainer email="carl.moser@students.olin.edu">carl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ackermann_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>mavros_msgs</depend>
  <depend>message_generation</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>rospy</depend>

  <build_depend>roscpp</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>phidgets_imu</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>swiftnav_ros</exec_depend>
  <exec_depend>rosserial</exec_depend>
  <exec_depend>pointgrey_camera_driver</exec_depend>
  <exec_depend>urg_node</exec_depend>

  <export></export>
</package>
